GNOME Bugzilla – Bug 340986
[vcdsrc] plugin not auto-plugged, and weird URI handling
Last modified: 2010-12-02 06:17:37 UTC
Please describe the problem: When I try to play a VCD I get an error message telling me that there isn't something associated to vcd:/// urls. Any info required to solve this will be provided, no privacy problems. Steps to reproduce: 1. Insert a VCD 2. Try to play it with totem 3. Sadness Actual results: I get an error message about no handler associated to vcd:/// Expected results: The VCD plays and I enjoy the magic of hollywood Does this happen every time? YES! Other information: I'm using ubuntu dapper (with all the relevant stuff up-to-date)
"Me too!". Using the xine backend, the vcd plays fine. Using the gstreamer (0.10) backend, with all associated plugins (I think), I get the error: "No URI handler implemented for "vcd"."
Still happening with totem 2.16, Ubuntu bug about that: https://launchpad.net/products/totem/+bug/43589 "... http://librarian.launchpad.net/3105849/totem-error-auto.png Error in totem when playing VCD automatically totem-gstreamer can not play VCD."
Is this related to 'VCD plugin not ported to gstreamer 0.10'? Are there any plans to port it? In countries like India VCD is still more popular than DVD to play rented movies. That is why I want to know. I will also try to help porting plugin myself if anybody can provide any guidelines.
onkarshinde, the source code of the vcd plugin is available with the gstreamer-0.8 package (see links above). You can check the gstreamer mailing lists for any plans to port. Since in this bug report there is no discussion lately, it probably means that nobody is actually working on this. I would recommend to go ahead and port the plugin.
Bug report with patch to play (S)VCDs in Gstreamer, 0.8: Bug 158704
Hi all, I've been having the same problem for quite some time also here in my IBM Thinkpad T43 (Debian, sid/unstable) . I thought it was a kernel issue, since it happened sometime after I upgrade to a certain kernel version. Sorry, can't remember the exact version, it happened about 1 year ago and this _is_ Debian unstable ya know :-) After searching for more details last weekend due to an outrageous itch to be able play VCD in GNOME, I found out that this may be a GNOME issue. Not really sure why 'though. But I do able to make VCD play again by doing this (as root) before playing (XXX: this may be specific to Debian): /etc/init.d/dbus stop To play the VCD in totem (-xine) run this: totem vcd:// (since without dbus, totem seems to failed to get the Play button to work, so we need to tell totem directly) Ofcourse by stopping dbus, I lost many GNOME functionalities, no Network Manager, no Power Manager, etc... It'd be really great if someone could just fix this issue correctly :-) I'd love to help, but I'm not familiar with GNOME technologies, yet :-( ps: Maybe unrelated, there's also issues of VCD automounting to have failed, manual mounting can be made to work, although only `ls` worked, copying VCD's .DAT files always failed using `cp` or nautilus. It all used to worked fine though (GNOME 2.<10 and linux kernel 2.6.<15, I think).
Arief, have a look at https://bugs.launchpad.net/ubuntu/+source/linux-source-2.6.17/+bug/82307 I copy comments #20, #21 here: #20, I went by the LKML (linux-kernel mailing list) on this issue and I believe the answer for this precise issue (the issue of not being able to copy the DAT files, NOT the issue of playback of VCDs with gstreamer), is greatly summarised at http://uwsg.iu.edu/hypermail/linux/kernel/0612.1/1351.html Could someone (with a VCD disk and is affected) try out and report back? #21, Gstreamer comes with a plugin, cdxaparse, that parses a .dat file from (S)VCD into raw MPEG-1. Reference: http://gstreamer.freedesktop.org/data/doc/gstreamer/head/gst-plugins-bad-plugins/html/gst-plugins-bad-plugins-plugin-cdxaparse.html Do gst-inspect-0.10 | grep -i vcd to check if you have the plugin. ---- Apparently, the ability to copy .dat files from VCDs is enabled by that gstreamer plugin that does on the fly conversion to raw MPEG stream? It appears to be similar to functionality of copying directly the songs of an audio CD with a file manager to the hard disk (I am giving this as an example; not supported).
I have the correct plugin installed, but I can only play it with totem vcd:// (can't find a way to play VCD easily without manual command input, option in file management of nautilus is useless), and totem (2.23.2 for Fedora 9) only plays the first section (of 6 sections). don't know how to play the left. [ganlu@localhost ~]$ gst-inspect-0.10 | grep -i vcd vcdsrc: vcdsrc: VCD Source cdxaparse: cdxaparse: (S)VCD parser cdxaparse: vcdparse: (S)VCD stream parser typefindfunctions: video/x-vcd: dat and information about package: Name : totem Arch : i386 Version : 2.23.2 Release : 4.fc9 Size : 5.5 M Repo : installed Summary : Movie player for GNOME URL : http://www.gnome.org/projects/totem/ License : GPLv2 with exception Description: Totem is simple movie player for the Gnome desktop. It features a : simple playlist, a full-screen mode, seek and volume controls, as : well as a pretty complete keyboard navigation.
With latest gstreamer version of bad plugins, 0.10.8, I can play VCD tracks with command 'gst-launch-0.10 playbin uri=vcd://n', where n is track number. The problem is that totem still shows me error. I think following code in totem-uri.c might be the cause. --- static char * totem_get_mountpoint_for_vcd (const char *uri) { return NULL; } --- I will see if patching the source helps and then put my observations here.
This bug seems being fixed under current Fedora 9. Could be gstreamer-plugin-bad-0.10.7 or gsteamer-ffmpeg-0.10.4, don't know, but VCD now plays well.
Created attachment 149725 [details] Terminal output in Ubuntu 9.10 Ubuntu 9.10 test case: 'totem /media/cdrom0' (this is the "autoplay" command in Ubuntu) doesn't work. 'totem vcd:///' doesn't work. 'totem vcd://' works. Attached is the Terminal output. Blessings.
*** Bug 353098 has been marked as a duplicate of this bug. ***
Created attachment 158212 [details] [review] [vcdsrc] Change VCD URI handler to the DVD scheme The current URI parsing code doesn't allow setting the "device" from which the VCD should be read. Use the same structure as the DVD URI handling instead, so that devices can be passed in the URI, as well as track number. Up the rank of the VCD plugin so that it can be auto-plugged and used by Totem.
The vcdsrc plugin in gst-plugins-bad does not allow auto-plugging with playbin2, and didn't parse the same style of URIs as the DVD bin either. The above patch fixes that.
Can we get the patch into this release?
Comment on attachment 158212 [details] [review] [vcdsrc] Change VCD URI handler to the DVD scheme Don't particularly like this kind of URI scheme (also not in the dvd case), but committed this with a minor leak fix in an error code path.
Now Totem does not play specific tracks when issuing command 'totem vcd://1', 'totem vcd://2', etc. as it did in 2.30. All these commands now only play the first track (and stop there, perhaps due to the old seeking bug reported in https://bugzilla.gnome.org/show_bug.cgi?id=547661).